[package]
name = "iprange"
version = "0.1.0"
authors = ["Guy Taylor <thebigguy.co.uk@gmail.com>"]
repository = "https://github.com/TheBiggerGuy/iprange-rs"
homepage = "https://github.com/TheBiggerGuy/iprange-rs"

[features]
default = []

[dependencies]
log = "0.3.x"

[dev-dependencies]
env_logger = "0.4.x"
